<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    tools:layout_editor_absoluteY="81dp">

    <Spinner
        android:id="@+id/fontSizeSpinner"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fontColourSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fontColourSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="439dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/applyChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/fontSizeSpinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="59dp"
        android:text="@string/font_size_label"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/fontSizeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="532dp"
        android:text="@string/font_colour_label"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fontColourSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/applyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="applyChanges"
        android:text="@string/apply_changes_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fontColourSpinner" />
</android.support.constraint.ConstraintLayout>